--- a/style/style.css
+++ b/style/style.css
@@ -36,7 +36,7 @@
   animation: animacion3 4s ease-in-out infinite;
 }
 
-.tarjeta,
+.carta,
 .fondo-rainbow,
 .medio,
 .sombra,
@@ -58,6 +58,7 @@
 .circle3,
 .circle4,
 .circle5,
+.circle6,
 .arriba,
 .sombra,
 .overlay,
@@ -83,6 +84,7 @@
 .circle3,
 .circle4,
 .circle5,
+.circle6,
 .circlenegativo {
   position: absolute;
 }
@@ -101,36 +103,39 @@ overflow: hidden;
 }
 
 .tarjeta {
+  position: absolute;
+  width: 220px;
+  height: 300px;
   display: flex;
   perspective: 1000px;
   transform-style: preserve-3d;
+  transition: transform 0.4s ease, width 0.4s ease, height 0.4s ease;
 }
-.tarjeta:hover {
+
+.tarjeta.flip {
   animation-play-state: paused; 
+  width: 330px;
+  height: 450px;
+  transition: transform 0.4s ease, width 0.4s ease, height 0.4s ease;
+  
 }
-
-
+.tarjeta.flip > .frente{
+pointer-events: all;
+}
 
 .carta {
-  width: 220px;
-  height: 300px;
   filter: contrast(1.5);
   cursor:pointer;
   border-radius: 11px;
-transition: 0.2s ease;
 backface-visibility: hidden;
 
 }
-.carta:hover{
-  border-radius: 15px;
-  width: 330px;
-  height: 450px;
-
+.frente{
+  pointer-events: none;
 }
-
 .trasera{
   background-image: url(../assets/ATRAS.webp);
-  background-size: contain;
+  background-size: cover;
   transform: rotateY(180deg);
 }
 
@@ -140,13 +145,12 @@ backface-visibility: hidden;
 
 
 .fondo-rainbow{
-  background-size: auto;
   background: linear-gradient(45deg, rgba(0,255,76,1) 0%, rgba(255,0,228,1) 49%, rgba(0,202,255,1) 71%, rgba(255,248,0,1) 100%);
 }
 
 .medio {z-index: 5;}
 .arriba {z-index: 10;}
-.sombra {z-index: 12;}
+.sombra {z-index: 15;}
 .capaholograficaestrellas{
   position: absolute;
   width: 100%;
@@ -206,6 +210,9 @@ backface-visibility: hidden;
 }
 
 .carousel-item {
+  justify-content: center;
+  align-items: center;
+  display: flex;
   width: 330px;
   height: 450px;
   position: relative;
@@ -228,13 +235,15 @@ backface-visibility: hidden;
 
 
 .cartel {
+  justify-content: center;
   z-index: 700;
   background-color: rgba(0, 0, 0, 0.700);
   backdrop-filter:blur(0.2rem);
 }
 
 .cartel p{
-padding-top: 20%;
+  padding-top: 100px;
+  top: 100px;
   text-align: center;
   font-size: 150%;
   color: rgb(255, 255, 255);
@@ -250,6 +259,7 @@ padding-top: 20%;
   z-index: 999999;
   transition: 0.4s;
 }
+
 
 
 .botonreset:hover{
@@ -291,6 +301,11 @@ cursor: pointer;
   box-shadow: 0px 0px 100px 100px rgb(255, 255, 255);
   z-index: 9;
 }
+.circle6 {
+  /*---------------abajo de troquel amplio-------------------*/
+  box-shadow: 0px 0px 50px 50px rgb(255, 255, 255);
+  z-index: 4;
+}
 .circle5 {
   /*---------------abajo de troquel chico-------------------*/
   box-shadow: 0px 0px 50px 50px rgb(255, 255, 255);
@@ -317,8 +332,8 @@ cursor: pointer;
 }
 .circlenegativo {
   /*---------------sombra carta-------------------*/
-  box-shadow: 0px 0px 300px 100px rgba(0, 0, 0, 0.467);
-  z-index: 13;
+  box-shadow: 0px 0px 300px 100px rgba(0, 0, 0, 0.183);
+  z-index: 30;
 }
 
 
